[gd_scene load_steps=7 format=2]

[ext_resource path="res://imported_assets/backgrounds/forest/BG_Forest_3-BackForest.png" type="Texture" id=1]
[ext_resource path="res://imported_assets/backgrounds/forest/BG_Forest_1-sky.png" type="Texture" id=2]
[ext_resource path="res://imported_assets/backgrounds/forest/BG_Forest_2-hills.png" type="Texture" id=3]
[ext_resource path="res://imported_assets/backgrounds/forest/BG_Forest_4-ThiccTrees.png" type="Texture" id=4]
[ext_resource path="res://imported_assets/backgrounds/forest/BG_Forest_5-Foreground.png" type="Texture" id=5]
[ext_resource path="res://ActionLevels/backgrounds/LevelForest.gd" type="Script" id=6]

[node name="LevelForest" type="CanvasLayer"]
script = ExtResource( 6 )
scrolling_time_middleground = 1e+06
scrolling_time_foreground = 1e+06
scrolling_time_ending = 1e+06

[node name="SkyBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="SkyBackground"]
motion_offset = Vector2( 1, 0 )
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="SkyBackground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="HillBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="HillBackground"]
motion_offset = Vector2( 1, 0 )
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="HillBackground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false

[node name="BackForestBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackForestBackground"]
motion_offset = Vector2( 1, 0 )
motion_mirroring = Vector2( 5760, 0 )

[node name="Sprite" type="Sprite" parent="BackForestBackground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="FrontTreesBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="FrontTreesBackground"]
motion_offset = Vector2( 1, 0 )
motion_mirroring = Vector2( 5760, 0 )

[node name="Sprite" type="Sprite" parent="FrontTreesBackground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="Foreground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Foreground"]
motion_offset = Vector2( 1, 0 )
motion_mirroring = Vector2( 5760, 0 )

[node name="Sprite" type="Sprite" parent="Foreground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
centered = false
